# dubme_adl

./: .gitignore  .gitmodules  Dubme_ML_engineer_-_problem_resolution_-_Alejandro_Delgado_Luezas.docx  Makefile  README.md  pyproject.toml
data/: audio_metrics_CleanUNet.csv  audio_metrics_FAIR.csv  transcription_metrics_CleanUNet.csv  transcription_metrics_FAIR.csv
data/transcriptions/: inside_and_low_volume.txt  inside_and_low_volume_denoised.txt  inside_and_reverb_denoised.txt  music_background.txt  music_background_denoised.txt  outside_and_wind.txt  outside_and_wind_denoised.txt
data/transcriptions_gt/: inside_and_low_volume_gt.txt  inside_and_reverb_gt.txt  music_background_gt.txt  outside_and_wind_gt.txt
environment/: linux-64.yml  macOS.yml
src/: pipeline.py  research_pipeline.py  separation_program.py  utils.py
src/dubme_adl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
