[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dubme_adl"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "matplotlib",
  "ffmpeg",
  "moviepy",
  "soundfile",
  "pesq",
  "pystoi",
  "openai-whisper",
  "torchvision",
  "torchaudio",
  "jiwer",
]
requires-python = ">=3.9"

[project.optional-dependencies]
code-style = ["black>=22.9.0", "flake8>=5"]
tests = ["pytest"]
type-check = ["mypy==1.1.1", "pydantic>=1.10", "types-tqdm"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
audiolm = ["py.typed"]

[tool.pytest.ini_options]
norecursedirs = "submodules, scratch, data, outputs"

[tool.mypy]
warn_redundant_casts = true
check_untyped_defs = true
allow_redefinition = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
  "numpy.typing.mypy_plugin",
]

[[tool.mypy.overrides]]
module = [
  "pytest.*",
  "scipy.*",
  "matplotlib.*",
  "ffmpeg.*",
  "moviepy.*",
  "soundfile.*",
  "pesq.*",
  "pystoi.*",
  "openai-whisper.*",
  "torchvision.*",
  "torchaudio.*",
  "jiwer.*",
]
ignore_missing_imports = true
